WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315144
[JSC] Fix DFG CPS validation for inlined sort comparator
https://bugs.webkit.org/show_bug.cgi?id=315144
Summary
[JSC] Fix DFG CPS validation for inlined sort comparator
Shu-yu Guo
Reported
2026-05-19 16:58:21 PDT
rdar://177411241
Attachments
Add attachment
proposed patch, testcase, etc.
Shu-yu Guo
Comment 1
2026-05-19 17:05:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65238
EWS
Comment 2
2026-05-20 09:44:05 PDT
Committed
313579@main
(7429d22f2bfd): <
https://commits.webkit.org/313579@main
> Reviewed commits have been landed. Closing PR #65238 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug